// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:inputDate 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    style="position: relative;"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  date
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-DateControl is-date cxd-Form-control"
          >
            <div
              class="cxd-DatePicker"
              tabindex="0"
            >
              <input
                autocomplete="off"
                class="cxd-DatePicker-input"
                placeholder="请选择日期"
                type="text"
                value="2019-06-07"
              />
              <a
                class="cxd-DatePicker-clear"
              >
                <icon-mock
                  classname="icon icon-input-clear"
                  icon="input-clear"
                />
              </a>
              <a
                class="cxd-DatePicker-toggler"
              >
                <icon-mock
                  classname="icon icon-date"
                  icon="date"
                />
              </a>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:inputDate with clearable: clearable false 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Panel--form"
            style="position: relative;"
          >
            <div
              class="cxd-Panel-heading"
            >
              <h3
                class="cxd-Panel-title"
              >
                <span
                  class="cxd-TplField"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="cxd-Panel-body"
            >
              <form
                class="cxd-Form cxd-Form--horizontal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="cxd-Form-item cxd-Form-item--horizontal"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label cxd-Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          日期
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="cxd-Form-value"
                  >
                    <div
                      class="cxd-DateControl is-date cxd-Form-control"
                    >
                      <div
                        class="cxd-DatePicker"
                        tabindex="0"
                      >
                        <input
                          autocomplete="off"
                          class="cxd-DatePicker-input"
                          placeholder="请选择日期"
                          type="text"
                          value="2022-08-19"
                        />
                        <a
                          class="cxd-DatePicker-toggler"
                        >
                          <icon-mock
                            classname="icon icon-date"
                            icon="date"
                          />
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="cxd-Panel-footerWrap"
            >
              <div
                class="cxd-Panel-btnToolbar cxd-Panel-footer"
              >
                <button
                  class="cxd-Button cxd-Button--primary"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:inputDate with clearable: clearable true 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Panel--form"
            style="position: relative;"
          >
            <div
              class="cxd-Panel-heading"
            >
              <h3
                class="cxd-Panel-title"
              >
                <span
                  class="cxd-TplField"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="cxd-Panel-body"
            >
              <form
                class="cxd-Form cxd-Form--horizontal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="cxd-Form-item cxd-Form-item--horizontal"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label cxd-Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          日期
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="cxd-Form-value"
                  >
                    <div
                      class="cxd-DateControl is-date cxd-Form-control"
                    >
                      <div
                        class="cxd-DatePicker"
                        tabindex="0"
                      >
                        <input
                          autocomplete="off"
                          class="cxd-DatePicker-input"
                          placeholder="请选择日期"
                          type="text"
                          value=""
                        />
                        <a
                          class="cxd-DatePicker-toggler"
                        >
                          <icon-mock
                            classname="icon icon-date"
                            icon="date"
                          />
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="cxd-Form-item cxd-Form-item--horizontal"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label cxd-Form-itemColumn--normal"
                  >
                    <span />
                  </label>
                  <div
                    class="cxd-Form-value"
                  >
                    <div
                      class="cxd-Form-static"
                    >
                      <div
                        class="cxd-Form-control"
                      >
                        <span
                          class="cxd-PlainField"
                        >
                          <span
                            class="text-muted"
                          >
                            -
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="cxd-Panel-footerWrap"
            >
              <div
                class="cxd-Panel-btnToolbar cxd-Panel-footer"
              >
                <button
                  class="cxd-Button cxd-Button--primary"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:inputDate with format & inputFormat 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Panel--form"
            style="position: relative;"
          >
            <div
              class="cxd-Panel-heading"
            >
              <h3
                class="cxd-Panel-title"
              >
                <span
                  class="cxd-TplField"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="cxd-Panel-body"
            >
              <form
                class="cxd-Form cxd-Form--horizontal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="cxd-Form-item cxd-Form-item--horizontal"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label cxd-Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          日期
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="cxd-Form-value"
                  >
                    <div
                      class="cxd-DateControl is-date cxd-Form-control"
                    >
                      <div
                        class="cxd-DatePicker"
                        tabindex="0"
                      >
                        <input
                          autocomplete="off"
                          class="cxd-DatePicker-input"
                          placeholder="请选择日期"
                          type="text"
                          value="19/08-2022"
                        />
                        <a
                          class="cxd-DatePicker-clear"
                        >
                          <icon-mock
                            classname="icon icon-input-clear"
                            icon="input-clear"
                          />
                        </a>
                        <a
                          class="cxd-DatePicker-toggler"
                        >
                          <icon-mock
                            classname="icon icon-date"
                            icon="date"
                          />
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="cxd-Form-item cxd-Form-item--horizontal"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label cxd-Form-itemColumn--normal"
                  >
                    <span />
                  </label>
                  <div
                    class="cxd-Form-value"
                  >
                    <div
                      class="cxd-Form-static"
                    >
                      <div
                        class="cxd-Form-control"
                      >
                        <span
                          class="cxd-PlainField"
                        >
                          今天是2022年, 08月, 19日
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="cxd-Panel-footerWrap"
            >
              <div
                class="cxd-Panel-btnToolbar cxd-Panel-footer"
              >
                <button
                  class="cxd-Button cxd-Button--primary"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
